--- a/readme
+++ b/readme
@@ -1,9 +1,10 @@
 Run
 
+conda activate snakepy311
 pip install -r requirements.txt
 uvicorn app:app --reload
 
-cd to studykeeyApplication
+cd to studykeetApplication
 npm install
 npm start
 
