Add desktop app deployment configuration and build scripts
- Enhanced Electron Forge configuration with app metadata and icons
- Updated package.json with proper product name and description
- Added comprehensive DEPLOYMENT.md guide covering:
  * Building installers for Windows, macOS, and Linux
  * Adding custom app icons
  * Code signing for production
  * Distribution strategies (manual, GitHub Releases, auto-update)
  * Backend deployment considerations

- Created build scripts for easy packaging:
  * build-app.bat (Windows)
  * build-app.sh (Linux/Mac)

- Updated README with deployment section
- Configured app metadata:
  * Product name: StudyKeet
  * Bundle ID: com.studykeet.app
  * Category: Education
  * Windows metadata for proper installer properties

Ready to build executables with: npm run make

--- a/readme
+++ b/readme
@@ -156,6 +156,31 @@ Once the backend is running, visit:
 - **Chakra UI**: Component library
 - **Axios**: HTTP client
 
+## Building Desktop Executables
+
+You can package StudyKeet as a standalone desktop application!
+
+**Quick Build:**
+```bash
+# Windows
+build-app.bat
+
+# Linux/Mac
+chmod +x build-app.sh
+./build-app.sh
+```
+
+This creates installers for your platform:
+- **Windows**: `.exe` installer in `studyKeetApplication/out/make/squirrel.windows/`
+- **macOS**: `.app` bundle in `studyKeetApplication/out/make/zip/darwin/`
+- **Linux**: `.deb` and `.rpm` in `studyKeetApplication/out/make/`
+
+📖 **See [DEPLOYMENT.md](DEPLOYMENT.md)** for complete deployment guide including:
+- Adding custom app icons
+- Code signing for production
+- Distribution options (GitHub Releases, auto-updates)
+- Backend deployment strategies
+
 ## Development
 
 ### Backend Structure:
@@ -169,6 +194,11 @@ Once the backend is running, visit:
 2. Add utility functions in `backend/utils/`
 3. Register routes in `main.py`
 4. Update frontend components in `studyKeetApplication/src/`
+
+### Documentation:
+- **[ARCHITECTURE.md](ARCHITECTURE.md)**: System architecture and data flow diagrams
+- **[DEPLOYMENT.md](DEPLOYMENT.md)**: Desktop app deployment guide
+- **[MIGRATION.md](MIGRATION.md)**: Migration guide from old structure
 
 ## Troubleshooting
 
